
- added -I flag to bakefile_gen too
- msevc4prj: fixed breakage of <debug-info> introduced in 0.2.7
- added suncc backend
- msvs2005prj, msvs2008prj: added support for x64 builds


Version 0.2.8
-------------

- msvc: fixed incorrect compiler flags for debug info without debug runtime


Version 0.2.7
-------------

- added getTagAttrib() helper (#97)
- fixed shared library names and sonames on Solaris to use only one version
  number: use libfoo.so.1 for the file and the soname and libfoo.so for the
  only symlink
- msvs2008prj: fixed MIDL compiler settings
- autoconf, gnu: fixed pkgconfig module to respect DESTDIR (#248)
- msvs*prj, msvc, msvc6prj: using debug info without debug runtime was fixed
  to keep all optimizations enabled (#212)
- added support fo running on Mac OS X Snow Leopard


Version 0.2.6
-------------

- autoconf: fixed dependencies support for traditional Unix compilers
- autoconf: correct shared library extension under HP-UX ia64
- autoconf: added support for new (10 and 11) Intel C/C++ compiler versions
- watcom: fixes for OpenWatcom 1.8 (Jiri Malak, #238)
- fixed assert failure with wxWidgets' presets (#230)
- msvs*prj: pass preprocessor flags to IDL compiler (#240)
- msvs*prj: define WIN32 preprocessor symbol
- fixed 100% CPU usage in bakefile_gen
- added <debug-info-edit-and-continue> tag to support Visual Studio
  debugger's Edit and Continue feature
- msvs*prj: allow overriding names of .vcproj files using MSVS_PROJECT_FILE
  variable (#224)


Version 0.2.5
-------------

- msvs2003prj, msvs2005prj: fixed PCH handling broken in 0.2.4
- mingw: fixed C compiler invocation broken in 0.2.4 (#231)


Version 0.2.4
--------------

- msvs200xprj: if "-o foo.vcproj" is specified on the command line, only
  generate foo.vcproj and not foo.sln (#174)
- autoconf: fixes for non-default BUILDDIR
- msvs2005prj: fixed _WIN32_WCE define for PocketPC 2003 platform (#187)
- put user- or configure-provided LDFLAGS and LIBS to the end of linker